Main part finished

--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -745,7 +745,9 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 \subsection{Описание моделей}
 
 В данном исследовании сравнивается результат работы двух аналитических прогнозных модели машинного обучения: линейной регрессии и градиентного бустинга.
-Также для каждой из моделей проверяется гипотеза эффективности применения предварительной кластеризации объектов строительства. Схематичное изображение дата-тракта исследованных моделей представлено на (рис.~\ref{fig:data_tract}).
+Также для каждой из моделей проверяется гипотеза эффективности применения предварительной кластеризации объектов строительства. Схематичное изображение дата-тракта исследованных моделей представлено на (рис.~\ref{fig:data_tract}). 
+
+Так как предлагается использовать моделей обучения с учителем, размеченную выборку разделяем по эпохам. В контрольную выборку попадают 3 последних размеченных месяца, в обучающую~--- все остальные.  
 
  
 \begin{figure}[h]
@@ -801,16 +803,13 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 	\label{Tab:2}
 \end{table}
 
+\newpage
 
 \textbf{Пороговая классификация.} Здесь, проверялась гипотеза о возможности разделить объекты недвижимости по уровню, а именно, за основу был взят признак $f$:
 \begin{gather}\label{pklas1}
 	a_i\leq \frac{p_j\cdot|R|}{\sum\limits_{k\in R} p_k}\leq a_{i+1},
 \end{gather}
 где $p_j$~--- актуальная стоимость строительства исследуемого объекта, $R$~--- все объекты жилищного строительства в регионе, $|R|$~--- количество этих объектов, а $a_i$~--- выведенные эмпирически пороговые значения. Таким образом, по сути объект строительства оценивается по отношению стоимости его строительства к стоимости среднего объекта стройки в регионе, и на основе пороговых значений этого признака происходит классификация. На (рис.~\ref{fig:porclas}) представлена визуализация значения признака оценки. Не трудно заметить, что точки можно удачно разделить на 4 группы. На основе данных были выбраны 3 пороговых значения по центрам отрезков крайних точек групп: $a_1 \approx 0,8; a_2 \approx 1,2; a_3 \approx 1,5$.
-
-Заметим, что величины ошибок для этого подхода не сильно хуже результатов работы алгоритмов кластеризации (Таблица~\ref{Tab:2}). Однако, интерпретируемость пороговой классификации значительно выше, так выделяются 4 слоя объектов строительства, условно их можно назвать: "эконом", "средний класс", "бизнес" и "элитное" жилье. Интерпретируемость высока еще и потому, что такой терминологии придерживаются маркетологи крупных девелоперских компаний. 
-
-Резюмируя, разница в величине ошибки $\approx10\%$ на данном этапе не является критической, так как напрямую не влияет на точность модели, а только на то, в какую регрессионную группу попадет объект. Поэтому на данном этапе в силу лучшей интерпретируемости предполагаем использование модели классификации с большим приоритетом.  
 
 \begin{figure}[h]
 	
@@ -824,19 +823,49 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 	
 \end{figure} 
 
+Заметим, что величины ошибок для этого подхода не сильно хуже результатов работы алгоритмов кластеризации (Таблица~\ref{Tab:2}). Однако, интерпретируемость пороговой классификации значительно выше, так выделяются 4 слоя объектов строительства, условно их можно назвать: "эконом"\ , "средний класс"\ , "бизнес"\ и "элитное"\ жилье. Интерпретируемость высока еще и потому, что такой терминологии придерживаются маркетологи крупных девелоперских компаний. 
+
+Резюмируя, разница в величине ошибки $\approx10\%$ на данном этапе не является критической, так как напрямую не влияет на точность модели, а только на то, в какую регрессионную группу попадет объект. Поэтому на данном этапе в силу лучшей интерпретируемости предполагаем использование модели классификации с большим приоритетом.  
 
 \subsubsection{Ядро модели}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+В качестве ядра модели рассматриваются два регрессионных алгоритма: классическая линейная регрессия и градиентный бустинг. 
 
-\newpage
-\section{Результаты работы алгоритма}
-\subsection{Пример полученных результатов - ключевые атрибуты}
+\textbf{Линейная регрессия.} В применении данного подхода рассмотрены модель без предобработки и две модели с предобработкой данных: кластеризацией $k-means$ для четырех кластеров и пороговой классификацией. Реализация алгоритма взята из библиотеки sklearn.
 
-\subsection{Сравнение результатов с другими методами}
+\textbf{Градиентный бустинг.} При обучении модели, в основе, которой лежит градиентный бустинг были рассмотрены 2 подхода с применением пороговой классификации и без нее. Для обучения взята модель LightGBM с открытым исходным кодом. Эта иплементация расширяет алгоритм градиентного бустинга, добавлен тип автоматического выбора объектов. Также заметим, что в основе этой модели лежат простые деревья решений, поэтому пороговая классификация, фактически представляющая из себя дерево из одного шага, может быть включена в бустинговую модель и поэтому в качестве отдельного шага большого смысла не имеет. Также стоит отметить, что LightGBM имеет стохастический характер алгоритма, поэтому для получения корректных оценок точности его стоит запустить несколько раз и отражать средний результат, именно такой подход и будет применен. Далее рассмотрим насколько теоретические выводы коррелируют с практикой.
 
-\subsection{Сравнение результатов с оценкой предложенной метрики качества}
+\subsection{Результаты работы алгоритмов}
 
+\textbf{Сравнение результатов.} Показатели качества предложенных выше моделей (рис.~\ref{fig:data_tract}) представлены в Таблице~\ref{Tab:3}. Нетрудно заметить, что модель градиентного бустинга в среднем показала себя значительно лучше линейной регрессии. Если смотреть на линейную регрессию, то метрики качества модели существенно лучше при применении предварительной группировки, при этом классификация по $f$---метрике
+на практике показала себя лучше чем $k-means$. Последнее скорее всего связано с выбором начального приближения. Для градиентного бустинга же напротив пороговая классификация положительного результата не принесла, и оказывается лучше использовать алгоритм в классической вариации. 
+\begin{table}[h]
+	\centering
+	%\begin{tabular}{l|l|l|l}
+	\begin{tabular}{lcccc}
+		
+		\hline  Модель& MSE &  $R^2$ & MAE & MAPE \\
+		\hline LinearRegression  & 61564 & 0,516 & 307 & 20\%\\
+		$k-means^{++}$ \& LinearRegression  & 45671 & 0,634 & 260& 17,7\%\\
+		f-clas \& LinearRegression & 43282 & 0,652 & 248 & 17,3\%\\
+		f-clas \& LightGBM & 24467 &  0,808 & 224 & 13,6\%\\
+		\hline
+		\textbf{LightGBM}&  \textbf{22009}& \textbf{0,827}& \textbf{196}&
+		\textbf{12\%}   \\
+		\hline 
+	\end{tabular}
+	
+	\caption{Показатели качества построенных моделей}
+	\label{Tab:3}
+\end{table}
+
+\textbf{Индикация проблемы.} 
+На основе исследуемой даты фактического окончания строительства может быть построен индикационный дашборд, который будет сигнализировать о проблемах с тем или иным финансируемым объектом жилищного строительства. 
+Так были выбраны 2 пороговых значения: $3$ года и $7$ лет. Если разница между плановой датой окончания строительства, установленная в проектной декларации на начало года, и предсказанной фактической датой готовности прогнозной моделью превышает 3 года, то объект попадает в желтую зону и выводится соответствующая индикация. Если же разница~--- превысит 7 лет, то даже в условия текущей нестабильности на рынке недвижимости такое смещение более чем существенно, и объект попадает в зону повышенного внимания и индикатируется красным.
+
+\textbf{Пример работы модели.}
+
+Рассмотрим в качестве примера "Клубный дом на Пришвина"\ данный строительный объект изначально должен был быть сдан в конце третьего квартала 2019 года, однако плановый срок готовности постепенно переносился, планируемая стоимость строительства увеличивалась, а на момент подготовки модели у застройщика была просрочка срока передачи актуальной проектной декларации в ЕИСЖС. Но несмотря на все это моделью был спрогнозирован срок окончания готовности в 180 дней и дом обозначен индикацией не был. На текущий момент времени опубликована проектная декларация, в которой застройщик обещает сдать объект в начале 4 квартала 2022 года, то есть спустя 150 дней. Аналитически просто выявить причину оптимистичного прогноза модели, фактическое строительство дома уже завершено и сейчас производится получение разрешения на ввод в эксплуатацию объекта недвижимости. Однако на получение этого результат не потребовалось тратить ресурс аналитиков.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
