--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -75,8 +75,8 @@ top=2cm,bottom=2cm]{geometry}
 \newpage
 \section{Введение}
 
-
- 
+Одной из ключевых отраслей экономики России является Строительная отрасль. Доля отрасли составляла от 4 до 8\%  от ВВП страны в различные годы. Особую роль в экономике государства и каждого отдельного взятого региона России играет жилищное строительство, удовлетворяя потребности населения в технологически качественном и современном жилье. Наличие жилья и его доступность напрямую влияет на такие социальные показатели как темпы прироста населения, рождаемость, оказывает воздействие на экономическую культуру, так как требует значительных вложений. Массовое жилищное строительство важно не только для решения социальных проблем, но и развития экономики в целом. Сфера жилищного строительства оказывает влияние на многие отрасли хозяйства страны, обладая сильным мультипликативным эффектом. Развитие данного сектора экономики плотно сопряжено с развитием строительной сферы, производства строительных материалов, деревообрабатывающей отрасли, выпуском продукции длительного потребления. Этот процесс инициирует создание новых рабочих мест, у населения появляются средства, на которые как раз и может быть осуществлена покупка жилья. 
+Немаловажное место занимает в экономике прогнозирование. Современные методы анализа данных и прогнозирования позволяют предсказывать динами развития как всей экономики в целом, так и отдельных рынков, в частности рынка строительства. В данной работе были изучены тенденции развития рынка жилищного строительства, теоретические основы алгоритмов машинного обучения и изучены реализации этих алгоритмов применительно к  данным в отрасли. В работе использовались открытые данные, доступные на сетевом портале наш.дом.рф, а также часть данных закрытого доступа Фабрики данных ПАО "Сберабанк"\ без публикации фактических значений. На основе данных, было построено и обучено несколько моделей, предсказывающих дату фактической готовности строительного объекта. В последствии было проведено сравнение результатов работы и точности этих моделей. В работе использовались библиотеки с открытым исходным кодом, включающие реализацию моделей классической линейной регрессии и градиентного бустинга.
 
 \newpage
 \subsection{Цели и задачи работы}
@@ -99,7 +99,7 @@ top=2cm,bottom=2cm]{geometry}
 
 \bigskip
 
-\textbf{Методы исследования.} Алгоритмы реализованы на языке программирования Python с использованием библиотек |||.
+\textbf{Методы исследования.} Алгоритмы реализованы на языке программирования Python с использованием библиотек sklearn и LightGBM.
 
 \bigskip
 
@@ -835,9 +835,13 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 
 \textbf{Градиентный бустинг.} При обучении модели, в основе, которой лежит градиентный бустинг были рассмотрены 2 подхода с применением пороговой классификации и без нее. Для обучения взята модель LightGBM с открытым исходным кодом. Эта иплементация расширяет алгоритм градиентного бустинга, добавлен тип автоматического выбора объектов. Также заметим, что в основе этой модели лежат простые деревья решений, поэтому пороговая классификация, фактически представляющая из себя дерево из одного шага, может быть включена в бустинговую модель и поэтому в качестве отдельного шага большого смысла не имеет. Также стоит отметить, что LightGBM имеет стохастический характер алгоритма, поэтому для получения корректных оценок точности его стоит запустить несколько раз и отражать средний результат, именно такой подход и будет применен. Далее рассмотрим насколько теоретические выводы коррелируют с практикой.
 
+\newpage
+
 \subsection{Результаты работы алгоритмов}
 
-\textbf{Сравнение результатов.} Показатели качества предложенных выше моделей (рис.~\ref{fig:data_tract}) представлены в Таблице~\ref{Tab:3}. Нетрудно заметить, что модель градиентного бустинга в среднем показала себя значительно лучше линейной регрессии. Если смотреть на линейную регрессию, то метрики качества модели существенно лучше при применении предварительной группировки, при этом классификация по $f$---метрике
+\textbf{Сравнение результатов.} 
+
+Показатели качества предложенных выше моделей (рис.~\ref{fig:data_tract}) представлены в Таблице~\ref{Tab:3}. Нетрудно заметить, что модель градиентного бустинга в среднем показала себя значительно лучше линейной регрессии. Если смотреть на линейную регрессию, то метрики качества модели существенно лучше при применении предварительной группировки, при этом классификация по $f$---метрике
 на практике показала себя лучше чем $k-means$. Последнее скорее всего связано с выбором начального приближения. Для градиентного бустинга же напротив пороговая классификация положительного результата не принесла, и оказывается лучше использовать алгоритм в классической вариации. 
 \begin{table}[h]
 	\centering
@@ -860,17 +864,27 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 \end{table}
 
 \textbf{Индикация проблемы.} 
+
 На основе исследуемой даты фактического окончания строительства может быть построен индикационный дашборд, который будет сигнализировать о проблемах с тем или иным финансируемым объектом жилищного строительства. 
-Так были выбраны 2 пороговых значения: $3$ года и $7$ лет. Если разница между плановой датой окончания строительства, установленная в проектной декларации на начало года, и предсказанной фактической датой готовности прогнозной моделью превышает 3 года, то объект попадает в желтую зону и выводится соответствующая индикация. Если же разница~--- превысит 7 лет, то даже в условия текущей нестабильности на рынке недвижимости такое смещение более чем существенно, и объект попадает в зону повышенного внимания и индикатируется красным.
+Так были выбраны 2 пороговых значения: $3$ года и $7$ лет. Если разница между плановой датой окончания строительства, установленная в проектной декларации на начало года, и предсказанной фактической датой готовности прогнозной моделью превышает 3 года, то объект попадает в желтую зону и выводится соответствующая индикация. Если же разница~--- превысит 7 лет, то даже в условия текущей нестабильности на рынке недвижимости такое смещение более чем существенно, и объект попадает в зону повышенного внимания и индикатируется красным. Внутри каждого сектора возможны разные оттенки индикации, интервал смены оттенка - год.
+Таким образом, такая система индикации позволяет верхнеуровнево оценить состояние портфеля финансируемых проектов, понять какая доля объектов требует внимания и оценить насколько остро стоит проблема. Так результат работы модели на первое июня показал, что доля объектов в красной зоне около 0,5\%, а объектов в желтой зоне порядка 20\%. Таким образом объем требующих внимания риск-аналитиков объектов снижена до $1/5$, при этом особое внимание необходимо уделить всего $1/200$. То есть объем проводимых аналитических работ можно сократить практически в 5 раз.
+
 
 \textbf{Пример работы модели.}
 
-Рассмотрим в качестве примера "Клубный дом на Пришвина"\ данный строительный объект изначально должен был быть сдан в конце третьего квартала 2019 года, однако плановый срок готовности постепенно переносился, планируемая стоимость строительства увеличивалась, а на момент подготовки модели у застройщика была просрочка срока передачи актуальной проектной декларации в ЕИСЖС. Но несмотря на все это моделью был спрогнозирован срок окончания готовности в 180 дней и дом обозначен индикацией не был. На текущий момент времени опубликована проектная декларация, в которой застройщик обещает сдать объект в начале 4 квартала 2022 года, то есть спустя 150 дней. Аналитически просто выявить причину оптимистичного прогноза модели, фактическое строительство дома уже завершено и сейчас производится получение разрешения на ввод в эксплуатацию объекта недвижимости. Однако на получение этого результат не потребовалось тратить ресурс аналитиков.
+Рассмотрим в качестве примера "Клубный дом на Пришвина"\ данный строительный объект изначально должен был быть сдан в конце третьего квартала 2019 года, однако плановый срок готовности постепенно переносился, планируемая стоимость строительства увеличивалась, а на момент подготовки модели у застройщика была просрочка срока передачи актуальной проектной декларации в ЕИСЖС. Но несмотря на все это моделью был спрогнозирован срок окончания готовности в 180 дней и дом обозначен индикацией не был. На текущий момент времени опубликована проектная декларация, в которой застройщик обещает сдать объект в начале 4 квартала 2022 года, то есть спустя 150 дней. Аналитически просто выявить причину оптимистичного прогноза модели, фактическое строительство дома уже завершено и сейчас производится получение разрешения на ввод в эксплуатацию объекта недвижимости. Однако на получение этого результата не потребовалось тратить ресурс аналитиков.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newpage
 \section{Экономический эффект от внедрения модели}
+Говоря об эффекте от внедрения модели в первую очередь стоит сказать о том, что в текущих реалиях политика банка, поставившего задачу, заключается в повышении эффективности и производительности команд в условиях сохранения численности штата. А это значит, что на плечи сохранившегося числа сотрудников ложится больший объем аналитической работы с потенциально рисковыми объектами. Поэтому любая возможность ресурсоемко упростить и ускорить работу риск-менеджеров уже ценна.
+
+В описанных выше условиях экономический эффект решаемой задачи можно рассмотреть в двух плоскостях. Оценить, существует ли вообще необходимость мониторинга степени готовности объектов строительства, а также сравнить эффективность  машинной оценки по сравнению с оценкой, полученной аналитически, сотрудником банка.
+
+
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -878,7 +892,7 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 \newpage
 \section{Заключение}
 
-
+В работе предложен метод оценки фактической даты готовности объектов в сфере жилищного строительства. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
