--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -63,7 +63,7 @@ top=2cm,bottom=2cm]{geometry}
 \newpage
 \begin{abstract}
 
-Рассматривается задача улучшения инструментов предиктивной аналитики, использующихся при мониторинге проектов в сфере жилищного строительства. Исследованы предложенные ранее схемы решения этой проблемы, на основе изученных материалов разработан подход по улучшению оценки вероятности просрочки выплаты займа застройщиком на основании отчетности, публикуемой в открытом доступе и уровне зависимости от импортируемых комплектующих и материалов. Предложен, реализован и протестирован алгоритм, основанный на алгоритмах нейросетевого обучения с использованием чисел Шепли.	
+Рассматривается задача улучшения инструментов предиктивной аналитики, использующихся при мониторинге проектов в сфере жилищного строительства. Исследованы предложенные ранее схемы решения этой проблемы, на основе изученных материалов разработан подход по прогнозированию даты фактической готовности строительного объекта на основании отчетности, публикуемой в открытом доступе и части данных доступных в Фабрике данных банка. Предложен, реализован и протестирован алгоритм, основанный на алгоритмах машинного обучения. Также в работе представлены способы предобработки данных для улучшения качества оценки модели.
 
 \end{abstract}
 
@@ -95,7 +95,7 @@ top=2cm,bottom=2cm]{geometry}
 
 \bigskip
 
-\textbf{Научная новизна.} Используется нейросетевой подход к определению вероятности банкротства заемщика с выделением признаков, вносящих максимальный вклад с помощью, чисел Шепли. В работе предлагается коэффициент, позволяющий оценить зависимость застройщика от импортных комплектующих и материалов, а также уровень потенциального риска, обусловленного политическими ограничениями.
+\textbf{Научная новизна.} Используется подход с использование алгоритмов машинного обучения для определению срока фактической готовности строительного объекта. В работе представлены методы предобработки датасета позволяющие улучшить качество прогнозной модели.
 
 \bigskip
 
@@ -105,8 +105,9 @@ top=2cm,bottom=2cm]{geometry}
 
 \textbf{Практическая ценность.} Полученная модель может быть использована в качестве встраиваемого модуля. Например, с её помощью можно:
 \begin{itemize}
-	\item корректировать оценку вероятности просрочки платежа застройщиком, учитывая его зависимость от импортируемых компонентов;
-	\item дополнять существующие системы мониторинга объектов строительства показателем уровня зависимости от импортных компонентов и моделью оценки наиболее важных показателей, влияющих на просрочку.
+	\item оптимизировать работу аналитиков рисков, позволяя им уделять больше внимания наиболее рисковым и проблемным объектам;
+	\item дополнять существующие системы мониторинга объектов строительства показателем даты плановой фактической готовности;
+	\item верхнеуровнево оценивать состояние портфеля финансируемых проектов.
 \end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -867,7 +868,7 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 
 На основе исследуемой даты фактического окончания строительства может быть построен индикационный дашборд, который будет сигнализировать о проблемах с тем или иным финансируемым объектом жилищного строительства. 
 Так были выбраны 2 пороговых значения: $3$ года и $7$ лет. Если разница между плановой датой окончания строительства, установленная в проектной декларации на начало года, и предсказанной фактической датой готовности прогнозной моделью превышает 3 года, то объект попадает в желтую зону и выводится соответствующая индикация. Если же разница~--- превысит 7 лет, то даже в условия текущей нестабильности на рынке недвижимости такое смещение более чем существенно, и объект попадает в зону повышенного внимания и индикатируется красным. Внутри каждого сектора возможны разные оттенки индикации, интервал смены оттенка - год.
-Таким образом, такая система индикации позволяет верхнеуровнево оценить состояние портфеля финансируемых проектов, понять какая доля объектов требует внимания и оценить насколько остро стоит проблема. Так результат работы модели на первое июня показал, что доля объектов в красной зоне около 0,5\%, а объектов в желтой зоне порядка 20\%. Таким образом объем требующих внимания риск-аналитиков объектов снижена до $1/5$, при этом особое внимание необходимо уделить всего $1/200$. То есть объем проводимых аналитических работ можно сократить практически в 5 раз.
+Таким образом, такая система индикации позволяет верхнеуровнево оценить состояние портфеля финансируемых проектов, понять какая доля объектов требует внимания и оценить насколько остро стоит проблема. Так результат работы модели на первое июня показал, что доля объектов в красной зоне около 1,5\%, а объектов в желтой зоне порядка 20\%. Таким образом объем требующих внимания риск-аналитиков объектов снижена до $1/5$, при этом особое внимание необходимо уделить всего $1/200$. То есть объем проводимых аналитических работ можно сократить практически в 5 раз.
 
 
 \textbf{Пример работы модели.}
@@ -892,7 +893,7 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 \newpage
 \section{Заключение}
 
-В работе предложен метод оценки фактической даты готовности объектов в сфере жилищного строительства. 
+В работе предложен метод оценки фактической даты готовности объектов в сфере жилищного строительства. Для улучшения оценки были построены модели предобработки данных основанные на кластеризации и пороговой классификации. Результаты прогноза моделей были оценены по соответствующим метрикам качества и было показано явное превосходство модели градиентного бустинга. Средняя абсолютная ошибка модели не превысила 13\%. Показана возможность использования построенной модели для индикации проблемных объектов и оценки качества портфеля финансируемых объектов. Обоснована экономическая эффективность внедрения модели уже на краткосрочном горизонте планирования. Возможными направлениями развития могут быть: обобщение модели на другие важные для проектного мониторинга признаки, переход от прогнозирования макропараметров объектов строительства к динамически изменяющимся показателям; добавление в признаковое описание объектов, изучаемых моделью показателей, описывающих уровень импортозависимости строительства. Последнее стало немаловажным фактором при оценке любого финансируемого проекта, как критерий повышенного риска.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -901,6 +902,6 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 
 \bibliographystyle{gost71s}
 \bibliography{mylib}
-\nocite{GV}
-
+\nocite{ Nikon, Antonov2014}
+\nocite{GV, Daugman, Daugman2, Daugman4, Adam_1, Adam_2, Matv, Min, Wildes, KKX, Masek, KP, Yang, Smirn, Medic, Tech, Terr, Conf3, Canny, Inter, Radon, Hough_Parab}
 \end{document}
