--- a/mylib.bib
+++ b/mylib.bib
@@ -187,4 +187,18 @@
 	year    = {2012}
 }
 
+@Article{Nikon,
+	author  = {{Никонова И.А.}},
+	journal = {Альпина паблишер},
+	title   = {Проектный анализ и проектное финансирование},
+	year    = {2012}
+}
+
+@article{Antonov2014,
+	author={{Антонов В.Г.} and {Масленников В.В.} and {Скамай Л.Г., Вачегин А.М.}},
+	journal = {Палеотип},
+	title={Управление рисками приоритетных инвестиционных проектов концепция и методология},
+	year = {2014}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
