--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -118,9 +118,7 @@ top=2cm,bottom=2cm]{geometry}
 
 \subsection{Мониторинг проектов}\label{task}
 
-изучить определение понятий: «мониторинг», «эффективность мониторинга», «предиктивная аналитика» для использования в настоящем исследовании
-
-Мониторинг проекта - процесс измерения показателей выполнения проекта, сбора данных об исполнении проекта, информационного обслуживания управления проектом с целью выявления его соответствия желаемому результату и плану, с последующим представлением и распространением полученных данных.
+Мониторинг проекта - процесс наблюдения за показателями выполнения проекта, оценки этих показателей, сбора информации об исполнении проекта, информационного обслуживания управления проектом с целью выявления его соответствия желаемому результату и плану, с последующим представлением и распространением полученных данных\cite{Adam_1}.
 
 Под контролем проекта понимается процесс сравнения фактических значений контрольных показателей с запланированными, последующего анализа отклонений, оценки тенденций и прогнозирования возможных альтернатив, разработки корректировок хода реализации проекта для улучшения прогноза.
 
