--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -865,7 +865,20 @@ c_k = \frac{1}{\sum\limits_{i=1}^{l}[a(x_i)= k]} \sum\limits_{i=1}^{l}[a(x_i)= k
 \textbf{Индикация проблемы.} 
 
 На основе исследуемой даты фактического окончания строительства может быть построен индикационный дашборд, который будет сигнализировать о проблемах с тем или иным финансируемым объектом жилищного строительства. 
-Так были выбраны 2 пороговых значения: $3$ года и $7$ лет. Если разница между плановой датой окончания строительства, установленная в проектной декларации на начало года, и предсказанной фактической датой готовности прогнозной моделью превышает 3 года, то объект попадает в желтую зону и выводится соответствующая индикация. Если же разница~--- превысит 7 лет, то даже в условия текущей нестабильности на рынке недвижимости такое смещение более чем существенно, и объект попадает в зону повышенного внимания и индикатируется красным. Внутри каждого сектора возможны разные оттенки индикации, интервал смены оттенка - год.
+Так были выбраны 2 пороговых значения: $3$ года и $7$ лет(рис.~\ref{fig:indication}). Если разница между плановой датой окончания строительства, установленная в проектной декларации на начало года, и предсказанной фактической датой готовности прогнозной моделью превышает 3 года, то объект попадает в желтую зону и выводится соответствующая индикация. Если же разница~--- превысит 7 лет, то даже в условия текущей нестабильности на рынке недвижимости такое смещение более чем существенно, и объект попадает в зону повышенного внимания и индикатируется красным. Внутри каждого сектора возможны разные оттенки индикации, интервал смены оттенка - год.
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{indication.jpg}
+	
+	\caption{Градиентная визуализация}
+	
+	\label{fig:indication}
+	
+\end{figure} 
+
 Таким образом, такая система индикации позволяет верхнеуровнево оценить состояние портфеля финансируемых проектов, понять какая доля объектов требует внимания и оценить насколько остро стоит проблема. Так результат работы модели на первое июня показал, что доля объектов в красной зоне около 1,5\%, а объектов в желтой зоне порядка 20\%. Таким образом объем требующих внимания риск-аналитиков объектов снижена до $1/5$, при этом особое внимание необходимо уделить всего $1/200$. То есть объем проводимых аналитических работ можно сократить практически в 5 раз.
 
 
