--- a/Efremov_Slides.tex
+++ b/Efremov_Slides.tex
@@ -246,7 +246,7 @@
 %-----------------------------------------------------------------------------------------------------
 
 \begin{frame}{Индикация проблем}	
-	\begin{block}{Визуализация для пользователя}
+	\begin{block}{Мониторинг портфеля объектов строительства}
 		Результат работы модели на первое июня показал, что доля объектов в красной зоне
 		около 1,5\%, а объектов в желтой зоне порядка 20\%
 	\end{block}
@@ -254,7 +254,7 @@
 	\begin{figure}[h]
 	\centering
 	\includegraphics[width=0.8\linewidth]{indication.jpg}
-	\caption{Градиент с шагом в год}
+	\caption{Градиентная визуализация}
 	\label{fig:{indication}}
 \end{figure}
 
@@ -264,17 +264,17 @@
 \begin{frame}{Экономический эффект}	
 	\begin{block}{Необходимость мониторинга}
 		\begin{itemize}
-			\item Плюс
-			\item Еще плюс
-			\item Снова плюс
+			\item Риски только по одному объекту могут составлять более 25 млрд. руб.
+			\item Ручной мониторинг отделом из 10 специалистов обойдется порядка 30 млн. руб ежегодно.
+			\item Отношение составляет менее промилле от потенциальной суммы риска только по одному проекту.
 		\end{itemize}
 	\end{block}
 
 \begin{block}{Плюсы автоматизации}
 	\begin{itemize}
-		\item Плюс
-		\item Еще плюс
-		\item Снова плюс
+		\item Возможность сэкономить около 80\% трудового ресурса аналитиков
+		\item Стоимость внедрения решения не превышает 5 млн. руб. при существовании возможности масштабирования.
+		\item Стоимость обслуживания около 1 млн. ежегодно с учетом всего жизненного цикла.
 	\end{itemize}
 	
 \end{block}
@@ -285,7 +285,7 @@
 \begin{frame}{Выносится на защиту}
 \begin{block}{Полученные результаты}
 	\begin{itemize}
-		\item Разработано несколько методов прогнозирования даты фактической готовности объектов жилищного строительства
+		\item Разработаны  методы прогнозирования даты фактической готовности объектов жилищного строительства
 		\item Предложены методы предварительной предобработки данных для повышения качества прогноза модели
 		\item Результаты работы алгоритмов показывают состоятельность подхода и репрезентативность результата
 	\end{itemize}
